# Yeet-Social

./: .env.example  .gitignore  Cargo.toml  LICENSE  MISSING.md  README.md  README_AGE_VERIFICATION.md  README_FORWARD_SECRECY.md  README_LIVEKIT.md  README_PUSH.md  SECURITY.md  cd.yml  ci.yml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.dev.conf  security.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-3157e2bc6ea881c748a2d20856278df6ffd181216ae70cd8e3d148d05f7f464a.json  query-36dc786403a7665c06e84cc62e99a85a5da474db56216dfb6ceaefc9deecf627.json  query-6951276afb2108034cf2c553e70124945bbf977247b3431142cec16555dd7cbd.json  query-8ca36c62c610a6b51bb9f1c2ec913d287bb96647d28853bd49ac4da18be2fb43.json  query-9ee96a22fca4d48ddad579444fdcc30c2252ba8cf1f99d3422d393efdacccedc.json  query-c255221097082a18d1448a04df9cdf1b0aad0dd12c42c6ddcf1cb1f16b595bcb.json  query-c7f0fe5e3fc3708237967209417182777f3afd89b16090f2ae53f77adcf3d911.json  query-cb29c5f40a102a84a2504b2da2776c249db729ebd32e3edc7f4acd589efa484a.json  query-e067fba0b1c60874beb69409b8c4cb411a96afb5f7e622ca1c6a5d797fbcfae1.json
backend/migrations/: 0012_email_auth_and_settings.sql  0013_notifications.sql  0014_report_system.sql  0015_add_is_adult.sql  0016_nft_price_media.sql  0017_ppv_price.sql  0018_fee_ledger.sql  0019_permanent_visibility.sql  0020_email_verification.sql  0021_age_verification.sql  0022_cover_url.sql  0023_paper_wallets.sql  0024_messaging_e2ee.sql  0025_ppv_unlocks.sql  0026_admin_moderation.sql  0026_indexer_state.sql  0027_envelope_wrapper.sql  0027_yeet_credit.sql  0028_admin_actor.sql  0029_lives_and_scheduling.sql  0030_live_promotions.sql  0031_messaging_hardening.sql  0032_push_subscriptions.sql  0033_prekeys.sql  0034_multi_device.sql  0035_age_verification_cases.sql  0036_backfill_permanent_nft.sql  0037_onchain_indexer.sql  0038_points_oneway_conversion.sql  0039_transaction_ledger.sql  0040_token_explorer.sql
backend/src/: blockchain.rs  error.rs  fees.rs  main.rs  state.rs
backend/src/api/: admin_mod.rs  age_verification.rs  auth.rs  blocks.rs  boards.rs  conversations.rs  credit.rs  credit_ops.rs  e2ee.rs  email_auth.rs  explorer.rs  feed.rs  invitations.rs  ledger.rs  link_preview.rs  lives.rs  message_reports.rs  messages.rs  messaging_prefs.rs  middleware.rs  mod.rs  notifications.rs  paper_wallets.rs  permanent.rs  points.rs  posts.rs  push.rs  report.rs  scheduled_posts.rs  search.rs  sessions.rs  settings.rs  tips.rs  tokens.rs  uploads.rs  users.rs  ws.rs
backend/src/blockchain/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: auth.rs  batch_rewards.rs  cache.rs  credit_payout.rs  email.rs  indexer.rs  ledger.rs  livekit.rs  mod.rs  pii_vault.rs  push.rs  rate_limit.rs  tokens.rs  webboard.rs  ws_hub.rs
backend/src/static_assets/: sw.js
crates/dontyeet-account/: AI.md  Cargo.toml
crates/dontyeet-account/src/: error.rs  lib.rs  manager.rs  mnemonic_repo.rs  session.rs
crates/dontyeet-chain/: AI.md  Cargo.toml
crates/dontyeet-chain-algorand/: AI.md  Cargo.toml
crates/dontyeet-chain-algorand/src/: balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  history.rs  keys.rs  lib.rs  plugin.rs  signing.rs  transfer.rs  wasm.rs
crates/dontyeet-chain-bitcoin/: AI.md  Cargo.toml
crates/dontyeet-chain-bitcoin/src/: balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  history.rs  keys.rs  lib.rs  plugin.rs  signing.rs  transfer.rs  wasm.rs
crates/dontyeet-chain-cardano/: AI.md  Cargo.toml
crates/dontyeet-chain-cardano/src/: auth.rs  balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  history.rs  keys.rs  lib.rs  plugin.rs  signing.rs  transfer.rs  wasm.rs
crates/dontyeet-chain-evm/: AI.md  Cargo.toml
crates/dontyeet-chain-evm/src/: balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  history.rs  keys.rs  lib.rs  nonce.rs  plugin.rs  rpc.rs  signing.rs  token_balance.rs  tx.rs  wasm.rs
crates/dontyeet-chain-kadena/: AI.md  Cargo.toml
crates/dontyeet-chain-kadena/src/: balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  keys.rs  lib.rs  plugin.rs  rest.rs  signing.rs  wasm.rs
crates/dontyeet-chain-kaspa/: AI.md  Cargo.toml
crates/dontyeet-chain-kaspa/src/: balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  history.rs  keys.rs  lib.rs  plugin.rs  rest.rs  signing.rs  transfer.rs  wasm.rs
crates/dontyeet-chain-solana/: AI.md  Cargo.toml
crates/dontyeet-chain-solana/src/: balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  history.rs  keys.rs  lib.rs  plugin.rs  signing.rs  token_balance.rs  transfer.rs  wasm.rs
crates/dontyeet-chain-tron/: AI.md  Cargo.toml
crates/dontyeet-chain-tron/src/: balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  history.rs  keys.rs  lib.rs  plugin.rs  signing.rs  transfer.rs  wasm.rs
crates/dontyeet-chain-xrp/: AI.md  Cargo.toml
crates/dontyeet-chain-xrp/src/: balance.rs  broadcast.rs  config.rs  error.rs  fees.rs  history.rs  keys.rs  lib.rs  plugin.rs  signing.rs  transfer.rs  wasm.rs
crates/dontyeet-chain/src/: error.rs  fn_signer.rs  lib.rs  macros.rs  network.rs  send.rs  wallet.rs
crates/dontyeet-crypto/: AI.md  Cargo.toml
crates/dontyeet-crypto/src/: cipher.rs  derivation.rs  error.rs  hasher.rs  lib.rs  mnemonic.rs  payload.rs
crates/dontyeet-network/: AI.md  Cargo.toml
crates/dontyeet-network/src/: cache.rs  client.rs  endpoints.rs  error.rs  jsonrpc.rs  lib.rs  network_catalog.rs  path.rs  privacy.rs  rate_limit.rs  retry.rs
crates/dontyeet-primitives/: AI.md  Cargo.toml
crates/dontyeet-primitives/src/: address.rs  amount.rs  asset.rs  chain.rs  error.rs  lib.rs  network.rs  secret.rs  transaction.rs
crates/dontyeet-storage/: AI.md  Cargo.toml
crates/dontyeet-storage/src/: backend.rs  encrypted.rs  error.rs  lib.rs  serializer.rs
frontend/: Cargo.toml  Dockerfile  admin.html  index.html  manifest.json  sw.js
frontend/src/components/: composer.rs  mod.rs  post_card.rs  (+1 more)
frontend/style/: yeet.css
frontend/test/: ratchet.test.mjs
wallet/: Cargo.toml  build.ps1
wallet/src/: lib.rs  storage.rs
(+96 files in other folders)
