[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yeet-server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Cache
deadpool-redis = { version = "0.14", features = ["rt_tokio_1"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }

# Auth / JWT
jsonwebtoken = "9"
argon2 = "0.5"

# Blockchain (BSC / ethers)
ethers = { version = "2", features = ["legacy", "ws"] }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15"
once_cell = "1"
rand = "0.8"
