[package]
name        = "backend"
version     = "0.1.0"
edition     = "2021"
description = "Yeet Social Media — Rust/Axum backend"

[[bin]]
name = "yeet-server"
path = "src/main.rs"

[dependencies]
axum             = { version = "0.7", features = ["macros"] }
tokio            = { version = "1", features = ["full"] }
tower            = { version = "0.4", features = ["full"] }
tower-http       = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
sqlx             = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
redis            = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken     = "9"
rand             = "0.8"
hex              = "0.4"
ethers           = { version = "2", features = ["rustls"], default-features = false }
uuid             = { version = "1", features = ["v4", "serde"] }
chrono           = { version = "0.4", features = ["serde"] }
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror        = "1"
anyhow           = "1"
dotenvy          = "0.15"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator        = { version = "0.18", features = ["derive"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
