[package]
name        = "backend"
version     = "0.1.0"
edition     = "2021"
description = "Yeet Social Media — Rust/Axum backend (web + Android + iOS)"

[[bin]]
name = "yeet-server"
path = "src/main.rs"

[dependencies]
ethers = { version = "2", features = ["abigen", "legacy"] }
# Web framework
axum             = { version = "0.7", features = ["macros", "multipart"] }
tokio            = { version = "1", features = ["full"] }
tower            = { version = "0.4", features = ["full"] }
tower-http       = { version = "0.5", features = ["cors", "trace", "timeout", "limit", "fs"] }

# Serialisation
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Database
sqlx             = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Cache
redis            = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Auth
sha2            = "0.10"
jsonwebtoken     = "9"
rand             = "0.8"
hex              = "0.4"

# Ethereum wallet signature verification (lightweight — no ethers stack)
sha3             = "0.10"
k256             = { version = "0.13", features = ["ecdsa"] }

# Types
uuid             = { version = "1", features = ["v4", "serde"] }
chrono           = { version = "0.4", features = ["serde"] }

# HTTP client (RSS sync)
scraper          = "0.20"
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror        = "1"
anyhow           = "1"

# Config
dotenvy          = "0.15"

# Logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator        = { version = "0.18", features = ["derive"] }

# Async trait support
async-trait      = "0.1"

# Email (SMTP)
lettre           = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
