[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }

leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "Ethereum", "console",
    "Request", "RequestInit", "RequestMode",
    "Response", "Headers",
    "Storage", "Crypto",
] }
js-sys = "0.3"
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"

console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
