[package]
name        = "wallet"
version     = "0.1.0"
edition     = "2024"
description = "DontYeetWallet — non-custodial wasm wallet for Yeet Social"
publish     = false

[lib]
# `cdylib` is required by wasm-pack; `rlib` lets the crate be consumed
# normally for non-wasm host targets (tests, doc builds).
crate-type = ["cdylib", "rlib"]

# ---------------------------------------------------------------------------
# Dependencies on the secure crypto engine.
#
# `package =` renames keep the import space in *.rs source clean
# (`use dontyeet_account::...`). The path resolution still goes through the
# upstream crate names — that's purely a Cargo-internal mechanic that does
# not leak into any Rust source file.
#
# `dontyeet-chain-evm` is pulled in with `default-features = false` to drop
# the server-only `rpc` module. The wallet shim only needs the pure-crypto
# pieces (signing, RLP, address encoding).
# ---------------------------------------------------------------------------
[dependencies]
dontyeet-primitives = { package = "hyperhub-primitives", path = "../../HyperHUb/crates/hyperhub-primitives" }
dontyeet-crypto     = { package = "hyperhub-crypto",     path = "../../HyperHUb/crates/hyperhub-crypto" }
dontyeet-storage    = { package = "hyperhub-storage",    path = "../../HyperHUb/crates/hyperhub-storage" }
dontyeet-account    = { package = "hyperhub-account",    path = "../../HyperHUb/crates/hyperhub-account" }

# Per-chain pure-crypto crates. `default-features = false` drops the
# `rpc` module from each — the browser shim only needs the
# address-derivation paths, not the server-side network plumbing.
dontyeet-chain-evm      = { package = "hyperhub-chain-evm",      path = "../../HyperHUb/crates/hyperhub-chain-evm",      default-features = false }
dontyeet-chain-bitcoin  = { package = "hyperhub-chain-bitcoin",  path = "../../HyperHUb/crates/hyperhub-chain-bitcoin",  default-features = false }
dontyeet-chain-solana   = { package = "hyperhub-chain-solana",   path = "../../HyperHUb/crates/hyperhub-chain-solana",   default-features = false }
dontyeet-chain-cardano  = { package = "hyperhub-chain-cardano",  path = "../../HyperHUb/crates/hyperhub-chain-cardano",  default-features = false }
dontyeet-chain-xrp      = { package = "hyperhub-chain-xrp",      path = "../../HyperHUb/crates/hyperhub-chain-xrp",      default-features = false }
dontyeet-chain-algorand = { package = "hyperhub-chain-algorand", path = "../../HyperHUb/crates/hyperhub-chain-algorand", default-features = false }
dontyeet-chain-tron     = { package = "hyperhub-chain-tron",     path = "../../HyperHUb/crates/hyperhub-chain-tron",     default-features = false }
dontyeet-chain-kaspa    = { package = "hyperhub-chain-kaspa",    path = "../../HyperHUb/crates/hyperhub-chain-kaspa",    default-features = false }
dontyeet-chain-kadena   = { package = "hyperhub-chain-kadena",   path = "../../HyperHUb/crates/hyperhub-chain-kadena",   default-features = false }

# WASM/JS interop
wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
web-sys               = { version = "0.3", features = ["Window", "Storage", "console"] }
serde-wasm-bindgen    = "0.6"

# Async + serde (workspace-pinned where shared)
async-trait = "0.1"
serde       = { workspace = true }
serde_json  = { workspace = true }

# Base64 for the BrowserStorage wire format.
base64 = "0.22"

# Hex for sign_evm_transfer's returned signed-tx string.
hex = "0.4"

# Forward the `js` feature into getrandom so `rand` works under wasm32.
# Without this, BIP-39 entropy generation panics at runtime in the browser.
getrandom = { version = "0.2", features = ["js"] }

# Better panic messages in the browser console.
console_error_panic_hook = "0.1"

# wasm-pack ships an older `wasm-opt` that can't validate the bundle
# once all chain crates are linked in (reference-types / bulk-memory
# from one of the deps). The optimised bundle is still produced by
# Rust's own `opt-level = 3 + lto = "thin"`, so we just skip the
# wasm-opt post-pass; the file is ~10–15% bigger but works.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
