[package]
name = "dontyeet-chain-bitcoin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bitcoin chain plugin — UTXO model with P2PKH and P2WPKH support"

[features]
# `rpc` gates the network half (mempool.space client, fee estimation,
# transfer flow, RPC modules). Default-on so the server keeps working;
# WASM consumers (dontyeet-ui) opt out via `default-features = false`
# and get only the pure-crypto subset (keys, config, error).
default = ["rpc"]
rpc = [
    "dep:dontyeet-chain",
    "dep:dontyeet-network",
    "dep:async-trait",
    "dep:tracing",
]

[dependencies]
# Always-on (pure crypto + types).
dontyeet-primitives = { path = "../dontyeet-primitives" }
dontyeet-crypto = { path = "../dontyeet-crypto" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
hex.workspace = true
sha2.workspace = true
k256.workspace = true
bs58.workspace = true
bech32.workspace = true
zeroize.workspace = true
ripemd = "0.1"

# RPC-only.
dontyeet-chain = { path = "../dontyeet-chain", optional = true }
dontyeet-network = { path = "../dontyeet-network", optional = true }
async-trait = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# Browser-side balance reads (Phase M.3.2). The `wasm` module talks
# directly to mempool.space (BTC) and litecoinspace.org (LTC) via
# `gloo_net::http::Request`. Lives outside the `rpc` feature gate
# because `gloo-net` is browser-only — only enters the dep graph
# on `wasm32` targets.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
