[package]
name = "dontyeet-chain-cardano"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cardano chain plugin — Ed25519, CIP-1852, Blockfrost REST API"

[features]
# `rpc` gates the Blockfrost REST client + plugin trait impl.
# Default-on for the server; WASM consumers opt out via
# `default-features = false`.
default = ["rpc"]
rpc = [
    "dep:dontyeet-chain",
    "dep:dontyeet-network",
    "dep:async-trait",
    "dep:tracing",
]

[dependencies]
# Always-on (pure crypto + types). bech32 + blake2 + ed25519-dalek
# are all needed by enterprise-address derivation in keys.rs.
dontyeet-primitives = { path = "../dontyeet-primitives" }
dontyeet-crypto = { path = "../dontyeet-crypto" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
bech32.workspace = true
blake2.workspace = true
zeroize.workspace = true

# RPC-only.
dontyeet-chain = { path = "../dontyeet-chain", optional = true }
dontyeet-network = { path = "../dontyeet-network", optional = true }
async-trait = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# Browser-side balance reads (Phase M.3.2.10) and signing
# (Phase M.4.9). Talks to the keyless Koios REST API via
# `gloo_net::http::Request`; the M.4.9 send pipeline broadcasts the
# raw signed CBOR with `Content-Type: application/cbor`, which
# requires building a `js_sys::Uint8Array` for the body — hence the
# extra `js-sys` and `wasm-bindgen` entries below.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["json"] }
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
