[package]
name = "dontyeet-chain-tron"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DontYeetWallet TRON chain implementation"

[features]
# `rpc` gates the TronGrid REST client + plugin trait impl. Default-on
# for the server; WASM consumers opt out via `default-features = false`.
default = ["rpc"]
rpc = [
    "dep:dontyeet-chain",
    "dep:dontyeet-network",
    "dep:async-trait",
    "dep:tracing",
]

[dependencies]
# Always-on (pure crypto + types).
dontyeet-primitives = { path = "../dontyeet-primitives" }
dontyeet-crypto = { path = "../dontyeet-crypto" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
hex.workspace = true
sha2.workspace = true
sha3.workspace = true
k256.workspace = true
bs58.workspace = true
zeroize.workspace = true

# RPC-only.
dontyeet-chain = { path = "../dontyeet-chain", optional = true }
dontyeet-network = { path = "../dontyeet-network", optional = true }
async-trait = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# Browser-side balance reads (Phase M.3.2.3). Talks to TronGrid via
# `gloo_net::http::Request`. Browser-only — only enters the dep graph
# on `wasm32` targets.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
