[package]
name = "dontyeet-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, traits, and error definitions for DontYeetWallet"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
zeroize.workspace = true
subtle.workspace = true
url.workspace = true
chrono.workspace = true
